# pinsheet-scanner

./: .gitignore  PLAN.md  README.md  justfile  logbook.md  pyproject.toml  system_prompt.md  todo.md
.claude/rules/: project.md
data/: dataset.yaml
data/classifier/: labels.csv  train_labels.csv  val_labels.csv
data/detector/: dataset.yaml
data/detector/val/labels/: pinsheet_example.txt
data/train/: labels.cache
data/val/: labels.cache
debug_crops/: labels.csv
models/: hyperparams.json
scripts/: debug_crops.py  generate_data.py  label.py  profile_scan.py  train.py  train_classifier.py  validate_labels.py
src/: __init__.py  augment.py  classify.py  cli.py  constants.py  detect.py  labeler.html  labels.py  model.py  ocr.py  pipeline.py  preprocess.py  training.py
src/pinsheet_scanner/: __init__.py  augment.py  classify.py  classify_contour.py  classify_template.py  cli.py  constants.py  detect.py  model.py  ocr.py  pipeline.py  training.py
tests/: test_augment.py  test_classify.py  test_classify_template.py  test_detect.py  test_labels.py  test_ocr.py  test_pipeline.py  test_preprocess.py  test_training.py  test_tune.py
