[project]
name = "pinsheet-scanner"
version = "0.1.0"
description = "Extract 9-pin bowling (Kegeln) scores from scanned score sheets using YOLO for detection and a CNN classifier for pin state classification."
readme = "README.md"
authors = [
    { name = "Hohnik", email = "mail@niklashohn.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "torch>=2.0.0",
    "ultralytics>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]

[project.scripts]
pinsheet-scanner = "pinsheet_scanner:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that require trained model weights",
]
