[project]
name = "pinsheet-scanner"
version = "0.1.0"
description = "Extract 9-pin bowling (Kegeln) scores from scanned score sheets using YOLO for detection and a CNN classifier for pin state classification."
readme = "README.md"
authors = [
    { name = "Hohnik", email = "mail@niklashohn.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "optuna>=4.7.0",
    "torch>=2.0.0",
    "tqdm>=4.67.3",
    "typer>=0.23.1",
    "ultralytics>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]
ocr = [
    "pytesseract>=0.3.10",
]

[project.scripts]
pinsheet-scanner = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
sources = {"src" = ""}
artifacts = ["src/labeler.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: end-to-end tests that require trained model weights",
]
